--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,3 @@
-/* Global styles */
-body {
-  margin: 0;
-  font-family: sans-serif;
-  background-color: #f5f5f5;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
